@@ -8,6 +8,7 @@ v0.8.0
 - fixes and cleanup for Current, Day and Daily
 - improve/fix weather condition descriptions in DWD_ICON_MAPPING
 - remove date from Today.Sunrise and Today.Sunset
+- fix day icons for weather condition displayed at night
 v0.7.1
 - fix some syntax errors on python 3.11
 - check addon_data path exists
